# unibus_toy

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  REQUIREMENTS.md  VISION.md  cc.sh  format.md
configs/: m7_node0.yaml  m7_node1.yaml  m7_node2.yaml  node0.yaml  node1.yaml  node2.yaml
crates/ub-control/: Cargo.toml
crates/ub-control/src/: control.rs  lib.rs  member.rs  message.rs
crates/ub-core/: Cargo.toml
crates/ub-core/src/: addr.rs  config.rs  device.rs  error.rs  jetty.rs  lib.rs  mr.rs  types.rs  verbs.rs
crates/ub-core/src/device/: memory.rs  npu.rs
crates/ub-dataplane/: Cargo.toml
crates/ub-dataplane/benches/: verb_bench.rs
crates/ub-dataplane/src/: lib.rs
crates/ub-fabric/: Cargo.toml
crates/ub-fabric/src/: fabric.rs  lib.rs  peer_addr.rs  udp.rs
crates/ub-managed/: Cargo.toml
crates/ub-managed/src/: cache_pool.rs  coherence.rs  fetch_agent.rs  lib.rs  placer.rs  region.rs  registry.rs  sub_alloc.rs
crates/ub-obs/: Cargo.toml
crates/ub-obs/src/: lib.rs  metrics.rs  server.rs
crates/ub-transport/: Cargo.toml
crates/ub-transport/src/: dedup.rs  lib.rs  manager.rs  read_cache.rs  session.rs  transport.rs
crates/ub-wire/: Cargo.toml
crates/ub-wire/src/: codec.rs  frame.rs
crates/unibusctl/: Cargo.toml
crates/unibusctl/src/: main.rs
crates/unibusd/: Cargo.toml
crates/unibusd/src/: main.rs
docs/: DEPLOYMENT_GUIDE.md  DETAIL_DESIGN.md  IMPL_PLAN.md  M1_TEST_REPORT.md  M2_DEV_SUMMARY.md  M2_IMPL_PLAN.md  M2_TEST_REPORT.md  M3_DEV_SUMMARY.md  M4_DEV_SUMMARY.md  M4_IMPL_PLAN.md  M5_DEV_SUMMARY.md  M5_IMPL_PLAN.md  M6_DEV_SUMMARY.md  M6_IMPL_PLAN.md  M7_DEV_SUMMARY.md  M7_IMPL_PLAN.md  PROGRESS_AUDIT.md  REQUIREMENTS.md  m5_future_work.md
tests/: m1_e2e.sh  m2_e2e.sh  m3_e2e.sh  m4_e2e.sh  m5_e2e.sh  m7_e2e.sh
