[package]
name = "ub-control"
version.workspace = true
edition.workspace = true

[dependencies]
ub-core = { workspace = true }
ub-wire = { workspace = true }
ub-fabric = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
