[package]
name = "ub-fabric"
version.workspace = true
edition.workspace = true

[dependencies]
ub-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
