[package]
name = "unibusd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "unibusd"
path = "src/main.rs"

[dependencies]
ub-core = { workspace = true }
ub-wire = { workspace = true }
ub-transport = { workspace = true }
ub-control = { workspace = true }
ub-fabric = { workspace = true }
ub-obs = { workspace = true }
ub-dataplane = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
